Updating resume and about

--- a/resume/index.html
+++ b/resume/index.html
@@ -11,11 +11,11 @@
       <header class="main resume">
         <h2>Joel Gross</h2>
         <address>
-          <a href="mailto:jag547@cornell.edu" target="_top">jag547@cornell.edu</a>
+          <a href="mailto:jagj10@gmail.com" target="_top">jagj10@gmail.com</a>
           <br>
           <a href="http://joelgross.me/">http://joelgross.me/</a>
           <br><br>
-          Santa Monica, California<br>
+          San Francisco, California<br>
         </address>
       </header>
 
@@ -25,9 +25,14 @@
         <div class="left-column">
           <h2>Work Experience</h2>
 
+          <span class="company">Cruise Automation</span>
+          <p class="details small-caps">Senior Software Engineer</p>
+          <p class="details small-caps">July 2018 &mdash; Present</p>
+          <p class="details">Responsible for Radar and Lidar simulation as part of the 3D Simulation Sensors team. Modifications were made to Unreal Engine 4 to create a custom sensor architecture to model the Cruise car and its various sensors. Personally responsible for major re-architecture of the system, performance improvements, and development of the sensor simulations.</p>
+
           <span class="company">Lightstorm Entertainment</span>
           <p class="details small-caps">Software Engineer</p>
-          <p class="details small-caps">Nov 2016 &mdash; Present</p>
+          <p class="details small-caps">Nov 2016 &mdash; June 2018</p>
           <p class="details">Designed and developed a proprietary real-time particle system and a suite of tools surrounding the system for use in large-scale virtual production on the Avatar sequels. The system was built using CUDA and C++ and integrated into the pipeline for use on stage during motion capture as well as for previs shot creation. Additionally, responsible for shader development and the creation of workflows to assist artists with their daily production tasks.</p>
 
           <span class="company">DreamWorks Animation</span>
@@ -38,16 +43,12 @@
           <h2>Projects</h2>
 
           <span class="company">Algorithmic cryptocurrency trader</span>
-          <p class="details small-caps">Fall 2017 &mdash; Present</p>
-          <p class="details">Built a Machine Learning-based high-frequency trading bot that successfully trades hundreds of times a day in a live trading environment. The bot is trained on historical data of several different cryptocurrencies and is able to accurately predict trends over 70% of the time.</p>
+          <p class="details small-caps">Fall 2017 &mdash; February 2018</p>
+          <p class="details">Built a Machine Learning-based high-frequency trading bot that successfully traded hundreds of times a day in a live trading environment. The bot was trained on historical data of several different cryptocurrencies and was able to accurately predict trends over 70% of the time.</p>
 
           <span class="company">Fluid Simulation</span>
           <p class="details small-caps">Fall 2014 &mdash; Spring 2015</p>
           <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulates fluid and foam particles with realistic motion in real-time. Implemented several research papers resulting in a framework capable of running 128k fluid particles and up to 500k foam particles at 30 fps. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support fluid-cloth coupling.</p>
-
-          <span class="company">Deferred Rendering Engine</span>
-          <p class="details small-caps">Spring 2015</p>
-          <p class="details">Developed a 3D puzzle-action game using C++ and OpenGL in a team of 6. Team leader and personally responsible for developing the deferred renderer used in the game. Features include screen-space ambient occlusion, point light & directional light shadow mapping, and light volumes.</p>
 
           <span class="company">Thermo</span>
           <p class="details small-caps">Fall 2014</p>
@@ -60,19 +61,10 @@
           <span class="subsection">Programming</span>
 
           <ul class="details">
-            <li>C++ &bull; <span class="small-caps">Fluent, 8 years</span></li>
-            <li>C &bull; <span class="small-caps">Fluent, 8 years</span></li>
-            <li>Java &bull; <span class="small-caps">Fluent, 5 years</span></li>
-            <li>Python &bull; <span class="small-caps">Familiar, 5 years</span></li>
+            <li>C++ &bull; <span class="small-caps">Fluent, 9 years</span></li>
+            <li>C &bull; <span class="small-caps">Fluent, 9 years</span></li>
+            <li>Python &bull; <span class="small-caps">Fluent, 6 years</span></li>
             <li>C# &bull; <span class="small-caps">Proficient, 1 year</span></li>
-            <li>Actionscript 3 &bull; <span class="small-caps">Proficient, 1 year</span></li>
-          </ul>
-
-          <span class="subsection">Design</span>
-
-          <ul class="details">
-            <li>Adobe Photoshop &bull; <span class="small-caps">Fluent, 10 years</span></li>
-            <li>Adobe Flash &bull; <span class="small-caps">Proficient, 4 years</span></li>
           </ul>
 
           <span class="subsection">Tools &amp; Platforms</span>
@@ -86,6 +78,7 @@
             <li>Maya</li>
             <li>Unreal Engine 4</li>
             <li>Git</li>
+            <li>Perforce</li>
           </ul>
         </div>
       </section>
@@ -95,7 +88,7 @@
           <h2>Education</h2>
           <span class="school">Cornell University &mdash; GPA: 3.78</span>
           <p class="details">
-            <span class="small-caps">Fall 2014 &mdash; Spring 2015</span><br><br>
+            <span class="small-caps">Fall 2014 &mdash; Spring 2015</span><br>
             Graduate School<br>
             M.Eng &mdash; Computer Science
           </p>
@@ -103,7 +96,7 @@
           <span class="school">SUNY Binghamton University &mdash; GPA: 3.67</span>
           <p class="details">
             <span class="small-caps">Fall 2011 &mdash; Spring 2014</span><br>
-            <span class="small-caps">Graduated in 3 years</span><br><br>
+            <span class="small-caps">Graduated in 3 years</span><br>
             Watson School of Engineering<br>
             BS &mdash; Computer Science <br><br>
             Harpur College of Arts &amp; Sciences<br>
