--- a/resume/index.html
+++ b/resume/index.html
@@ -11,11 +11,8 @@
       <header class="main resume">
         <h2>Joel Gross</h2>
         <address>
-          <a href="mailto:jagj10@gmail.com" target="_top">jagj10@gmail.com</a>
-          <br>
-          <a href="http://joelgross.me/">http://joelgross.me/</a>
-          <br><br>
-          San Francisco, California<br>
+          <a href="mailto:jagj10@gmail.com" target="_top">jagj10@gmail.com</a><br>
+          Irvine, California<br>
         </address>
       </header>
 
@@ -26,8 +23,20 @@
           <h2>Work Experience</h2>
 
           <span class="company">Cruise Automation</span>
+          <p class="details small-caps">Staff Technical Lead Manager</p>
+          <p class="details small-caps">Apr 2022 &mdash; Present</p>
+          <p class="details">Tech lead and manager of a team building an RTX-based proprietary path tracer for high fidelity sensor simulation (cameras, lidar, radar) used for machine learning data generation.<br><br>
+
+          Took the project from prototype stages to full development while building out the team.<br><br>
+
+          Responsible for the overall architecture, planning, and day-to-day management of the team (including contractors).</p><br>
+
+          <p class="details small-caps">Staff Software Engineer</p>
+          <p class="details small-caps">Jan 2022 &mdash; Mar 2022</p>
+          <p class="details">Leading a team building an RTX-based proprietary path tracer for high fidelity sensor simulation (cameras, lidar, radar) used for machine learning data generation.</p><br>
+
           <p class="details small-caps">Senior Software Engineer</p>
-          <p class="details small-caps">July 2018 &mdash; Present</p>
+          <p class="details small-caps">July 2018 &mdash; Dec 2021</p>
           <p class="details">Responsible for Radar and Lidar simulation as part of the 3D Simulation Sensors team. Modifications were made to Unreal Engine 4 to create a custom sensor architecture to model the Cruise car and its various sensors. Personally responsible for major re-architecture of the system, performance improvements, and development of the sensor simulations.</p>
 
           <span class="company">Lightstorm Entertainment</span>
@@ -61,10 +70,9 @@
           <span class="subsection">Programming</span>
 
           <ul class="details">
-            <li>C++ &bull; <span class="small-caps">Fluent, 9 years</span></li>
-            <li>C &bull; <span class="small-caps">Fluent, 9 years</span></li>
-            <li>Python &bull; <span class="small-caps">Fluent, 6 years</span></li>
-            <li>C# &bull; <span class="small-caps">Proficient, 1 year</span></li>
+            <li>C++ &bull; <span class="small-caps">Fluent, 12 years</span></li>
+            <li>C &bull; <span class="small-caps">Fluent, 12 years</span></li>
+            <li>Python &bull; <span class="small-caps">Fluent, 10 years</span></li>
           </ul>
 
           <span class="subsection">Tools &amp; Platforms</span>
@@ -72,6 +80,7 @@
           <ul class="details">
             <li>CUDA</li>
             <li>OpenGL/GLSL</li>
+            <li>OptiX</li>
             <li>Linux</li>
             <li>Microsoft Windows</li>
             <li>Unity</li>
@@ -80,42 +89,27 @@
             <li>Git</li>
             <li>Perforce</li>
           </ul>
-        </div>
-      </section>
 
-      <section class="resume lower">
-        <div class="left-column">
           <h2>Education</h2>
-          <span class="school">Cornell University &mdash; GPA: 3.78</span>
-          <p class="details">
-            <span class="small-caps">Fall 2014 &mdash; Spring 2015</span><br>
-            Graduate School<br>
-            M.Eng &mdash; Computer Science
-          </p>
-
-          <span class="school">SUNY Binghamton University &mdash; GPA: 3.67</span>
-          <p class="details">
-            <span class="small-caps">Fall 2011 &mdash; Spring 2014</span><br>
-            <span class="small-caps">Graduated in 3 years</span><br>
-            Watson School of Engineering<br>
-            BS &mdash; Computer Science <br><br>
-            Harpur College of Arts &amp; Sciences<br>
-            BS &mdash; Economics
-          </p>
-        </div>
-
-        <div class="right-column">
-          <h2>Honors</h2>
-
-          <span class="subsection">Academic Honors</span>
 
           <ul class="details">
-            <li>Watson School of Engineering</li>
-            <li><span class="small-caps">Cum Laude</span></li><br>
-
-            <li>Harpur College of Arts &amp; Sciences</li>
-            <li><span class="small-caps">Cum Laude</span></li><br>
-            <li>Dean&rsquo;s List &bull; <span class="small-caps">Spring 2012, Fall 2012, Spring 2013, Fall 2013</span></li>
+            <span class="school">Cornell University</span>
+            <p class="details">
+              <span class="small-caps">Fall 2014 &mdash; Spring 2015</span><br>
+              <span class="small-caps">GPA: 3.78</span><br><br>
+              Graduate School<br>
+              M.Eng &mdash; Computer Science
+            </p>
+            <span class="school">SUNY Binghamton University</span>
+            <p class="details">
+              <span class="small-caps">Fall 2011 &mdash; Spring 2014</span><br>
+              <span class="small-caps">Graduated in 3 years</span><br>
+              <span class="small-caps">GPA: 3.67</span><br><br>
+              Watson School of Engineering<br>
+              BS &mdash; Comp Sci &mdash; Cum Laude <br><br>
+              Harpur College of Arts &amp; Sciences<br>
+              BS &mdash; Economics &mdash; Cum Laude
+            </p>
           </ul>
         </div>
       </section>
