--- a/resume/index.html
+++ b/resume/index.html
@@ -25,24 +25,24 @@
           <span class="company">Cruise Automation</span>
           <p class="details small-caps">Staff Technical Lead Manager</p>
           <p class="details small-caps">Apr 2022 &mdash; Present</p>
-          <p class="details">Tech lead and manager of a team building an RTX-based proprietary path tracer for high fidelity sensor simulation (cameras, lidar, radar) used for machine learning data generation.<br><br>
+          <p class="details">Tech lead and manager of the Rendering team. Built an RTX-based proprietary ray/path tracing engine for high fidelity sensor simulation (cameras, lidar, radar) used for machine learning data generation. Took the project from prototype stages to full development while building out a team of eight.<br><br>
 
-          Took the project from prototype stages to full development while building out the team.<br><br>
+          Responsible for an Unreal Engine 4-based sensor simulation for End-to-End closed loop simulation.<br><br>
 
-          Responsible for the overall architecture, planning, and day-to-day management of the team (including contractors).</p><br>
+          Responsible for the overall technical direction, architecture, and day-to-day management of the team.</p><br>
 
           <p class="details small-caps">Staff Software Engineer</p>
           <p class="details small-caps">Jan 2022 &mdash; Mar 2022</p>
-          <p class="details">Leading a team building an RTX-based proprietary path tracer for high fidelity sensor simulation (cameras, lidar, radar) used for machine learning data generation.</p><br>
+          <p class="details">Led a team building an RTX-based proprietary path tracer for high fidelity sensor simulation (cameras, lidar, radar) used for machine learning data generation.</p><br>
 
           <p class="details small-caps">Senior Software Engineer</p>
           <p class="details small-caps">July 2018 &mdash; Dec 2021</p>
-          <p class="details">Responsible for Radar and Lidar simulation as part of the 3D Simulation Sensors team. Modifications were made to Unreal Engine 4 to create a custom sensor architecture to model the Cruise car and its various sensors. Personally responsible for major re-architecture of the system, performance improvements, and development of the sensor simulations.</p>
+          <p class="details">Responsible for radar and lidar simulation as part of the 3D Simulation Sensors team. Modifications were made to Unreal Engine 4 to create a custom sensor architecture to model the Cruise car and its various sensors. Personally responsible for major re-architecture of the system, performance improvements, and development of the sensor simulations.</p>
 
           <span class="company">Lightstorm Entertainment</span>
           <p class="details small-caps">Software Engineer</p>
           <p class="details small-caps">Nov 2016 &mdash; June 2018</p>
-          <p class="details">Designed and developed a proprietary real-time particle system and a suite of tools surrounding the system for use in large-scale virtual production on the Avatar sequels. The system was built using CUDA and C++ and integrated into the pipeline for use on stage during motion capture as well as for previs shot creation. Additionally, responsible for shader development and the creation of workflows to assist artists with their daily production tasks.</p>
+          <p class="details">Designed and developed a proprietary real-time particle system and suite of tools surrounding the system for use in large-scale virtual production on the Avatar sequels. The system was built using CUDA and C++ and integrated into the pipeline for use on stage during motion capture as well as for previs shot creation. Additionally, responsible for shader development and the creation of workflows to assist artists with their daily production tasks.</p>
 
           <span class="company">DreamWorks Animation</span>
           <p class="details small-caps">Software Engineer - Shading R&D</p>
@@ -51,13 +51,13 @@
 
           <h2>Projects</h2>
 
-          <span class="company">Algorithmic cryptocurrency trader</span>
+          <span class="company">High-frequency algorithmic cryptocurrency trader</span>
           <p class="details small-caps">Fall 2017 &mdash; February 2018</p>
           <p class="details">Built a Machine Learning-based high-frequency trading bot that successfully traded hundreds of times a day in a live trading environment. The bot was trained on historical data of several different cryptocurrencies and was able to accurately predict trends over 70% of the time.</p>
 
           <span class="company">Fluid Simulation</span>
           <p class="details small-caps">Fall 2014 &mdash; Spring 2015</p>
-          <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulates fluid and foam particles with realistic motion in real-time. Implemented several research papers resulting in a framework capable of running 128k fluid particles and up to 500k foam particles at 30 fps. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support fluid-cloth coupling.</p>
+          <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulated fluid and foam particles with realistic motion in real-time. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support fluid-cloth coupling.</p>
 
           <span class="company">Thermo</span>
           <p class="details small-caps">Fall 2014</p>
